--- a/less/index.less
+++ b/less/index.less
@@ -4,6 +4,8 @@
    License: none (public domain)
 */
 
+@import url('https://fonts.googleapis.com/css?family=Alata|Montserrat|PT+Sans+Narrow|Roboto&display=swap');
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -23,6 +25,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	// border:1px solid gray;
+	max-width:100%;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -31,6 +35,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	margin: 0 10% 0 10%;
 }
 ol, ul {
 	list-style: none;
@@ -53,7 +58,128 @@ table {
     box-sizing: border-box;
 }
 
+@header-color: #8B0000;
+@heading-font: 'Alata', sans-serif;
+@body-font: 'Montserrat', sans-serif;
+@gray-text:#A9A9A9;
+@margin-top:1.5%;
+
 html, body {
-    height: 100%;
+	height: 100%;
+	color:white;
+	font-family:@body-font;
 }
 
+h1 {
+	font-family:@heading-font;
+	font-size:130%;
+}
+
+h2 {
+	font-family:@heading-font;
+}
+
+p {
+	font-size:80%;
+	width:100%;
+}
+
+.title {
+	font-size:100%;
+	font-style: italic;
+	color:@gray-text;
+}
+
+a {
+	font-family:inherit;
+	color:inherit;
+	text-decoration:inherit;
+}
+
+header {
+	background-color:@header-color;
+	display:flex;
+	justify-content:center;
+	flex-direction:column;
+	> nav {
+		display:flex;
+		justify-content:center;
+		> div {
+			display:flex;
+			justify-content:space-around;
+			align-items:center;
+			width:100%;
+			> div {
+				display:flex;
+				align-items:center;
+				justify-content:center;
+				padding:20px;
+					> a {
+						&:hover {
+							color:@gray-text;
+						}
+				}
+			}
+		}
+	}
+	> div {
+		border-top:1px solid white;
+		display:flex;
+		justify-content:center;
+		> div {
+			display:flex;
+			width:60%;
+			> div {
+				display:flex;
+				justify-content: center;
+				flex-direction:column;
+				background-color:white;
+				color:black;
+			}
+			> div:first-child {
+				width:40%;
+			}
+			> div:last-child {
+				width:60%;
+				> div {
+					width:100%;
+					margin-left:5%;
+					p, h1 {
+						margin: 2.5px 0 2.5px 0;
+						width:100%;
+					}
+					> div {
+						margin-top:20px;
+						> p {
+							> span {
+								font-family:@heading-font;
+								font-size:110%;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+section {
+	color:black;
+	margin-top:@margin-top;
+	> p {
+		margin-top:@margin-top;
+		font-size:100%;
+	}
+	> h2 {
+		margin-top:@margin-top;
+	}
+}
+
+footer {
+	background-color:@header-color;
+	margin-top:@margin-top;
+	> div {
+		display:flex;
+		justify-content: space-around;
+	}
+}
